Set WebViewImpl's size in OOPIF processes.

In an OOPIF process with a remote main frame, currently the size of
the WebViewImpl is not set, because it is not relevant when there is
no main frame to render. However, the VisualViewport size is required
so OOPIF resizes set it appropriately.

This has caused a problem during printing because it saves and then
restores the WebViewImpl size, which unfortunately also wipes out the
VisualViewport size. This CL sets the WebViewImpl size along with
the VisualViewport in order to keep them consistent.

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation
BUG=705867

Review-Url: https://codereview.chromium.org/2801143002
Cr-Commit-Position: refs/heads/master@{#462927}

Former-commit-id: 931d158f73d21b37bad43543239a7da2f587ff0e